--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa": "^2.7.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "micromatch": "^4.0.2",
     "moment": "^2.24.0",
     "ndzbx": "git+https://github.com/idlej/ndzbx.git",
     "node-zabbix-sender": "^1.1.0",
